--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
-/* The @import rule below imports the Playfair Display and Source Sans Pro fonts into the stylesheet. You don't have to edit this line.*/
+/* The @import rule below imports the Playfair Display and Source Sans Pro fonts into the stylesheet*/
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Source+Sans+Pro:wght@400&display=swap");
 
-
 body {
+  background-color: #eae2b7;
   color: #003049;
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
   padding: 40px;
 }
 
-/* Set the font family for any h1, h2, or h3 heading */
+/* Headings */
 h1,
 h2,
 h3 {
@@ -16,7 +16,17 @@ h3 {
   text-align: center;
 }
 
+/* Header */
+header {
+  text-align: center;
+}
 
+/* Containers */
+div {
+  background-color: #eae2b7;
+  margin: auto;
+  width: 600px;
+}
 
 article {
   padding: 50px 0;
@@ -27,48 +37,42 @@ article div {
   width: 100%;
 }
 
+/* Paragraphs */
 p {
   line-height: 1.5;
 }
 
-/* The div container constrains the content width within the main container to 600px */
-div {
-  margin: auto;
-  width: 600px;
+/* Links */
+a:link {
+  color: #d62828;
 }
 
+a:hover {
+  color: #f77f00;
+}
+
+nav a {
+  padding-left: 20px;
+}
+
+/* Images */
 img {
   width: 100%;
   max-width: 200px;
   height: auto;
 }
 
+.image-circle {
+  border: 2px solid #003049;
+  border-radius: 50%;
+}
+
+/* Footer */
+footer {
+  text-align: center;
+}
+
+/* Other page elements */
 hr {
   border: 1px solid black;
-}
-
-/* Add your solution below */
-
-body{
-  background-color: #eae2b7;
-}
-
-
-a:link {color: #d62828;}
-a:hover { color:#f77f00;}
-
-/* Navigation bar centered */
-nav{
-  text-align: center;
-}
-
-.image-circle {
-  border-radius: 50%;
-  border-width: 2px;
-  border-style: solid;
-  border-color: #003049;
-}
-
-footer{
-  text-align: center;
 }
